--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
+    "react-router-dom": "5.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
